connect to the database, add keyboard

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,9 @@
 bot.name=NewSpringDemoBot
 bot.token=6009424634:AAFu_lP2ewoPMt50cJDKc6OcX_bxvdeK8iA
+
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:postgresql://localhost:5432/telegram_bots
+spring.datasource.username=postgres
+spring.datasource.password=1
+
