add ads, scheduled,CallbackQueryCallbackQuery processing (end of course)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,8 @@
 bot.name=NewSpringDemoBot
 bot.token=6009424634:AAFu_lP2ewoPMt50cJDKc6OcX_bxvdeK8iA
+bot.owner=433846893
+
+cron.scheduler=* 0 * * * *
 
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
